moves test binary

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,7 @@
-all: packer test
+all: packer
 
 packer: packer.c
 	gcc packer.c -o packer -g
 
-test: test.c
-	gcc test.c -o test -g -no-pie
-
 clean:
-	-rm -f test packer
+	-rm -f packer
