--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,12 @@
-all: packer
+include = -Ipayload
 
-packer: packer.c
-	gcc packer.c -o packer -g
+all: payload/payload.o packer
+
+payload/payload.o:
+	$(MAKE) -C payload
+
+packer: packer.c payload/payload.o
+	gcc $(include) packer.c payload/payload.o -o packer -g 
+
+clean:
+	$(MAKE) -C payload -f Makefile clean
