moves additional logic to headers/payload

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,16 @@
-include = -Ipayload
+include = -Ipayload -Iheaders
 
 all: payload/payload.o packer
 
 payload/payload.o:
 	$(MAKE) -C payload
 
-packer: packer.c payload/payload.o
-	gcc $(include) packer.c payload/payload.o -o packer -g 
+headers/headers.o:
+	$(MAKE) -C headers
+
+packer: packer.c payload/payload.o headers/headers.o
+	gcc $(include) packer.c payload/payload.o headers/headers.o -o packer -g 
 
 clean:
 	$(MAKE) -C payload -f Makefile clean
+	$(MAKE) -C headers -f Makefile clean
