moves additional logic to caving library

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-include = -Ipayload -Iheaders
+include = -Ipayload -Iheaders -Icaving
 
 all: payload/payload.o packer
 
@@ -8,9 +8,13 @@ payload/payload.o:
 headers/headers.o:
 	$(MAKE) -C headers
 
-packer: packer.c payload/payload.o headers/headers.o
-	gcc $(include) packer.c payload/payload.o headers/headers.o -o packer -g 
+caving/caving.o:
+	$(MAKE) -C caving
+
+packer: packer.c payload/payload.o headers/headers.o caving/caving.o
+	gcc $(include) packer.c payload/payload.o headers/headers.o caving/caving.o -o packer -g 
 
 clean:
 	$(MAKE) -C payload -f Makefile clean
 	$(MAKE) -C headers -f Makefile clean
+	$(MAKE) -C caving -f Makefile clean
