begins centralizing target data storage

--- a/src/headers/Makefile
+++ b/src/headers/Makefile
@@ -1,5 +1,7 @@
+include = -I../info
+
 headers: headers.c
-	gcc -c headers.c -o headers.o
+	gcc $(include) -c headers.c -o headers.o
 
 clean:
 	-rm *.o
